--- a/templates/home/sejaPrime.html
+++ b/templates/home/sejaPrime.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 
-{% block title %} Perguntas Frequentes {% endblock %}
+{% block title %} Seja Prime {% endblock %}
 
 {% block main %}
 
@@ -18,7 +18,7 @@
       <div class="bg-light rounded p-4 box-shadow">
         <h2>Gold</h2>
         <ul class="list-unstyled lista-plano" style="border-radius: 20px; color: rgb(74, 74, 74); font-weight: bold;">
-          <li>→ 10 Anúncios</li>
+          <li>→ 45 Anúncios</li>
           <li>→ Anúncios mais visíveis</li>
         </ul>
 
