--- a/templates/paginaErro.html
+++ b/templates/paginaErro.html
@@ -1,4 +1,4 @@
-{%  extends 'base.html'%}
+{%  extends 'base_rodape_fixo.html'%}
 {% load static %}
 
 {%  load bootstrap %}
@@ -8,8 +8,8 @@
 {% block main %}
 
 <body>
-<div class="d-flex justify-content-center">
-   <h3 class="center"> Página não encontrada </h3>
+<div class="d-flex text-center justify-content-center">
+   <h3> Página não encontrada </h3>
 </div>
 
 
