--- a/templates/products/detalharAluguel.html
+++ b/templates/products/detalharAluguel.html
@@ -86,7 +86,7 @@
 				
 
 				<button type="button" style="margin-top: 45px;" class="btn btn-danger botao-redondo" data-toggle="modal" data-target="#modalEncerrar">
-   Encerrar
+   Encerrar Aluguel
   </button>
   <!-- Modal para aceitar -->
   <div class="modal" id="modalEncerrar">
@@ -116,7 +116,7 @@
 
 			
 
-<button type="button" style="margin-top: 45px;" class="btn btn-primary botao-redondo" data-toggle="modal" data-target="#myModal">
+<button type="button" style="margin-top: 45px;" class="btn btn-primary botao-redondo mr-5 mr-sm-1 mr-md-5" data-toggle="modal" data-target="#myModal">
    Aceitar Proposta
   </button>
   <!-- Modal para aceitar -->
