--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
               Meus Anúncios</a>
           </li>
 
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown bg">
 
             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
               href="perfil_usuario.html">
@@ -224,10 +224,10 @@
         <div class="extra ml-3">
           <a href="{% url 'termosDeUso' %}">Termos e condições de uso</a>
 
-          <a class="ml-3 politica-cookies" href="{% url 'termosDeUso' %}">Política de cookies</a>
+          <a class="ml-3 politica-cookies" href="{% url 'politicaCookies' %}">Política de cookies</a>
 
           <div class="d-md-none">
-            <a class="ml-3" href="{% url 'termosDeUso' %}">Política de cookies</a>
+            <a class="ml-3" href="{% url 'politicaCookies' %}">Política de cookies</a>
           </div>
         </div>
 
