--- a/templates/products/my-products.html
+++ b/templates/products/my-products.html
@@ -114,17 +114,17 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title text-danger">Exclusão</h5>
+                <h5 class="modal-title">Exclusão</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body text-danger">
-                <h6>Deseja mesmo excluir o produto?</h6>
+            <div class="modal-body">
+                <h6>Deseja mesmo excluir o anúncio?</h6>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal"> Não </button>
-                <a class="btn btn-primary" href="{% url 'delete_product' '0' %}"> Sim </a>
+                <button type="button" class="btn btn-danger botao-redondo" data-dismiss="modal"> Não </button>
+                <a class="btn btn-primary botao-redondo" href="{% url 'delete_product' '0' %}"> Sim </a>
             </div>
         </div>
     </div>
