--- a/templates/user/avaliacoesUsuario.html
+++ b/templates/user/avaliacoesUsuario.html
@@ -66,7 +66,7 @@
   <div class="row mt-5">
     {% for avaliacao in avaliacoes %}
 
-    <div class="row col-12 text-center justify-content-center">
+    <div class="row col-12 text-center justify-content-center mb-5">
       <li class="list-group-item mb-3 col-lg-6 col-12 ml-md-0 ml-4" style="border-radius: 10px;">
         {% if avaliacao.rate == 1 %}
         <span class="fa fa-star checked mr-1"></span>
@@ -108,8 +108,10 @@
       </li>
     </div>
 
-    {% empty %}
-    <h4>Este usuário ainda não possui avaliações!</h4>
+    {% empty %}   
+      <div class="row col-12 text-center justify-content-center ml-1 ml-sm-0 mb-5">
+        <h4>Este usuário ainda não possui avaliações!</h4>
+      </div>
 
     {% endfor %}
   </div>
